--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1>Hello Git</h1>
-        <p>A new line in our file!</p>
+        <p>Hello world</p>
     </div>
 </body>
 </html>
