I will push next this commit

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <div>
         <h1>Hello Git</h1>
         <p>Hello world</p>
-<<<<<<< HEAD
         <p>emergency-fix</p>
-=======
-        <p>Hello form new branch</p>
->>>>>>> hello-world-images
+        <p>This line is here to show how merging works.</p>
+        <p>This line is here to show how merging works.</p>
+        <p>This line is here to show how merging works.</p>
+        <p>This line is here to show how merging works.</p>
+        <p>This line is here to show how merging works.</p>
+
     </div>
 </body>
 </html>
