--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <p>This line is here to show how merging works.</p>
         <p>This line is here to show how merging works.</p>
         <p>This line is here to show how merging works.</p>
+        <p>merge hello-world</p>
+        <div>
+            hello-world
+        </div>
 
     </div>
 </body>
