--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hello Git</h1>
         <p>Hello world</p>
         <p>emergency-fix</p>
-        <p>This line is here to show how merging works.</p>
+        <p>This  merging works.</p>
         <p>This line is here to show how merging works.</p>
         <p>This line is here to show how merging works.</p>
         <p>This line is here to show how merging works.</p>
