--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bluestyle.css">
-    <title>Document</title>
+<title>Hello World!</title>
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-    <div>
-        <h1>Hello Git</h1>
-        <p>Hello world</p>
-        <p>emergency-fix</p>
-        <p>This  merging works.</p>
-        <p>This line is here to show how merging works.</p>
-        <p>This line is here to show how merging works.</p>
-        <p>This line is here to show how merging works.</p>
-        <p>merge hello-world</p>
-        <div>
-            hello-world
-        </div>
 
-    </div>
+<h1>Hello world!</h1>
+<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+<p>This is the first file in my new Git Repo.</p>
+<p>A new line in our file!</p>
+<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
 </body>
 </html>
