--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        hello conflict
-    </div>
+    <p>
+        hello next
+    </p>
 </body>
 </html>
